--- a/index.html
+++ b/index.html
@@ -14,8 +14,13 @@
             <p class="base">@Shanghai</p>
             <p class="stack">hodler, hoarder.</p>
             <span>
-                <a href="https://bibenwei.org/blog" target="_blank" title="Blog" class="link">
+                <a href="https://bibenwei.org/blog/" target="_blank" title="Blog" class="link">
                     <span>Blog</span>
+                </a>
+            </span>
+            <span>
+                <a href="https://bibenwei.org/blog/tools/" target="_blank" title="Blog" class="link">
+                    <span>Tools</span>
                 </a>
             </span>
             <span>
